--- a/MyPartyCore/Views/Party/Index.cshtml
+++ b/MyPartyCore/Views/Party/Index.cshtml
@@ -38,7 +38,7 @@
 
 
 <p>
-    @Html.ActionLink("Проголосовать", "vote", new { id = @Model.PartyID })
+    @Html.ActionLink("Проголосовать", "vote", new { ID = @Model.PartyID })
 </p>
 
 @section ListParties {
