--- a/MyPartyCore/Views/Party/Vote.cshtml
+++ b/MyPartyCore/Views/Party/Vote.cshtml
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.PartyId)
 
     <input type="submit" value="Save" class="btn btn-outline-primary" />
 
