--- a/MyPartyCore/Views/Party/Index.cshtml
+++ b/MyPartyCore/Views/Party/Index.cshtml
@@ -28,13 +28,30 @@
             </td>
             <td>
                 <div class="px-1">
-                        <img id="image" src='@Url.Action("GetImage", new { userName = item.Name })' class="img-thumbnail .img-fluid .max-width image" />
+                    <img id="image" src='@Url.Action("GetImage", new { userName = item.Name })' class="img-thumbnail .img-fluid .max-width image" />
                 </div>
 
             </td>
         </tr>
     }
 </table>
+
+@if (Model.PageViewModel.HasPreviousPage)
+{
+    <a asp-action="Index"
+       asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
+       class="btn btn-outline-primary">
+        Назад
+    </a>
+}
+@if (Model.PageViewModel.HasNextPage)
+{
+    <a asp-action="Index"
+       asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
+       class="btn btn-outline-primary">
+        Вперед
+    </a>
+}
 
 <p>
     @Html.ActionLink("Проголосовать", "vote", new { ID = @Model.PartyID })
@@ -58,7 +75,7 @@
     <script>
         $(".image").on("click", function () {
             var img = $(this);	// Получаем изображение, на которое кликнули
-		    var src = img.attr('src');
+            var src = img.attr('src');
             $('#preview').attr('src', src);
             $('#modal').modal('show');
         });
