L13-P3/3-Filters. Кэширование. • Переписать приложение на использование фильтра CustomCacheAttribute. • Перенести логику по сохранению контента для кэширования в OnActionExecuted и логику по предоставлению контента из кэша (если не истек) в OnActionExecuting.

--- a/MyPartyCore/Views/Party/Index.cshtml
+++ b/MyPartyCore/Views/Party/Index.cshtml
@@ -72,5 +72,5 @@
 
 @section ListParties {
     @await Component.InvokeAsync("PartiesList", new { LastViewedParties = false })
-    @await Component.InvokeAsync("PartiesList", new { LastViewedParties = true , lastPartyViews = @ViewData["partyViews"]})
+    @await Component.InvokeAsync("PartiesList", new { LastViewedParties = true })
 }
