-L14-P5/8. DataAnnotationValidation. -L14-P6/8. DataAnnotationCustomAttributeValidation. -L14-P7/8. ClientValidationSummary. -L14-P8/8. FluentValidation. -L14.2-2/3. DatabaseConfiguration -L14.2-3/3.AutoMapper

--- a/MyPartyCore/Views/Party/Vote.cshtml
+++ b/MyPartyCore/Views/Party/Vote.cshtml
@@ -4,8 +4,8 @@
 
 @using (Html.BeginForm("Save", "Party", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
-    @Html.ValidationSummary(true)
-
+      @Html.ValidationSummary(false, "", new { @class="text-danger" })
+    
     <div class="form-group row">
         @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "col-form-label" })
         <div class="editor-field has-error">
