--- a/MyPartyCore/Views/Home/Index.cshtml
+++ b/MyPartyCore/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<MyPartyCore.ViewModels.PartyViewModel>
 
-<p>Всем привет. Приходите на наши вечеринки</p>
+<h4>Всем привет. Приходите на наши вечеринки</h4>
 @foreach (var item in Model)
 {
 <p>
