--- a/MyPartyCore/Views/Account/Login.cshtml
+++ b/MyPartyCore/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyPartyCore.ViewModels.LoginViewModel
 
 <h2>Вход в приложение</h2>
-<form method="post" asp-controller="Auth" asp-action="Login">
+<form method="post" asp-controller="Account" asp-action="Login">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Name" class="control-label"></label><br />
