--- a/MyPartyCore/Views/Shared/_LoginPartial.cshtml
+++ b/MyPartyCore/Views/Shared/_LoginPartial.cshtml
@@ -5,10 +5,10 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-controller="Auth" asp-action="LogOff" asp-route-returnUrl="@Url.Action("Index", "Home")" method="post" class="navbar-right">
+    <form asp-controller="Account" asp-action="LogOff" asp-route-returnUrl="@Url.Action("Index", "Home")" method="post" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a title="Manage">Привет @UserManager.GetUserName(User)</a>
+                <a asp-controller="Account" asp-action="Profile" asp-route-id="@UserManager.GetUserId(User)">Привет @UserManager.GetUserName(User)</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Выход</button>
@@ -19,7 +19,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-controller="Auth" asp-action="Register">Регистрация</a></li>
-        <li><a asp-controller="Auth" asp-action="Login">Вход</a></li>
+        <li><a asp-controller="Account" asp-action="Register">Регистрация</a></li>
+        <li><a asp-controller="Account" asp-action="Login">Вход</a></li>
     </ul>
 }
