--- a/MyPartyCore/Views/Users/Index.cshtml
+++ b/MyPartyCore/Views/Users/Index.cshtml
@@ -34,6 +34,7 @@
                 }
                 <form asp-action="Delete" asp-route-id="@user.Id" method="post" style="display : inline-block ;">
                     <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
+                    <a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="Edit" asp-route-userid="@user.Id">Права доступа</a>
                     <button type="submit" class="btn btn-sm btn-danger">
                         Удалить
                     </button>
