--- a/MyPartyCore/Views/_ViewImports.cshtml
+++ b/MyPartyCore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MyPartyCore
 @using MyPartyCore.Models
+@using MyPartyCore.ViewModels
 @using MyPartyCore.ViewComponents
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, MyPartyCore
