--- a/MyPartyCore/Views/Account/Profile.cshtml
+++ b/MyPartyCore/Views/Account/Profile.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Email" class="control-label">Email</label>
-        <input type="text" asp-for="Email" class="form-control" readonly/>
+        <input type="text" asp-for="Email" class="form-control" readonly />
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
@@ -32,3 +32,5 @@
         <input type="submit" value="Сохранить" class="btn btn-default" />
     </div>
 </form>
+
+<a asp-controller="Party" asp-action="List" asp-route-id="@Model.Id">Список моих вечеринок</a>
