--- a/MyPartyCore/Views/Party/List.cshtml
+++ b/MyPartyCore/Views/Party/List.cshtml
@@ -35,7 +35,7 @@
                     @item.Location
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new {  id = item.Id  })
+                    @Html.ActionLink("Редактировать", "Edit", new {  id = item.Id  })
                 </td>
             </tr>
         }
