--- a/MyPartyCore/Views/Party/Edit.cshtml
+++ b/MyPartyCore/Views/Party/Edit.cshtml
@@ -1,14 +1,12 @@
-﻿@model MyPartyCore.ViewModels.CreatePartyViewModel
+﻿@model MyPartyCore.ViewModels.EditPartyViewModel
 
-
-<h4>Введите информацию о новой вечеринке</h4>
+<h4>Редактирование вечеринки</h4>
 <hr />
 <div class="row">
-    <div>
-        <form asp-action="Add" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <input type="hidden" asp-for="OwnerId" />
+                <input type="hidden" asp-for="Id" />
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -26,17 +24,19 @@
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AgeLimit" class="control-label"></label>
-                <input asp-for="AgeLimit"/>
-                <span asp-validation-for="AgeLimit" class="text-danger"></span>
+                <input type="hidden" asp-for="OwnerId" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="AgeLimit" /> @Html.DisplayNameFor(model => model.AgeLimit)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
-    </div>
 </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+
