--- a/MyPartyCore/Views/Party/Vote.cshtml
+++ b/MyPartyCore/Views/Party/Vote.cshtml
@@ -4,8 +4,8 @@
 
 @using (Html.BeginForm("Save", "Party", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
-      @Html.ValidationSummary(false, "", new { @class="text-danger" })
-    
+    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
     <div class="form-group row">
         @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "col-form-label" })
         <div class="editor-field has-error">
@@ -48,6 +48,7 @@
     </div>
 
     @Html.HiddenFor(model => model.PartyId)
+    @Html.HiddenFor(model => model.UserId)
 
     <input type="submit" value="Save" class="btn btn-outline-primary" />
 
