--- a/MyPartyCore/Views/Party/Add.cshtml
+++ b/MyPartyCore/Views/Party/Add.cshtml
@@ -6,21 +6,66 @@
 <div class="row">
     <div>
         <form asp-action="Add" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+
+            <div class="text-danger validation-summary-errors" data-valmsg-summary="true">
+                <ul>
+                    @foreach (var modelState in ViewData.ModelState.Values)
+                    {
+                        foreach (var error in modelState.Errors)
+                        {
+                            <li>@error.ErrorMessage</li>
+                        }
+                    }
+                </ul>
+            </div>
+
+
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+
+                <div class="text-danger validation-summary-errors" data-valmsg-summary="true">
+                    <ul>
+                        @if (!(ViewData.ModelState["Title"] == null))
+                        {
+                            foreach (var error in ViewData.ModelState["Title"].Errors)
+                            {
+                                <li>@error.ErrorMessage</li>
+                            }
+                        }
+                    </ul>
+                </div>
+
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <div class="text-danger validation-summary-errors" data-valmsg-summary="true">
+                    <ul>
+                        @if (!(ViewData.ModelState["Date"] == null))
+                        {
+                            foreach (var error in ViewData.ModelState["Date"].Errors)
+                            {
+                                <li>@error.ErrorMessage</li>
+                            }
+                        }
+                    </ul>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Location" class="control-label"></label>
                 <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
+                <div class="text-danger validation-summary-errors" data-valmsg-summary="true">
+                    <ul>
+                        @if (!(ViewData.ModelState["Location"] == null))
+                        {
+                            foreach (var error in ViewData.ModelState["Location"].Errors)
+                            {
+                                <li>@error.ErrorMessage</li>
+                            }
+                        }
+                    </ul>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
