--- a/MyPartyCore/Views/Party/Index.cshtml
+++ b/MyPartyCore/Views/Party/Index.cshtml
@@ -13,7 +13,7 @@
             @Html.DisplayNameFor(model => model.PartyParticipants[0].ArrivalDate)
         </th>
         <th>
-            Фото
+            @Localizer["Photo"]
         </th>
     </tr>
 
