--- a/MyPartyCore/wwwroot/css/site.css
+++ b/MyPartyCore/wwwroot/css/site.css
@@ -7,8 +7,6 @@ body {
 }
 
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
@@ -51,7 +49,7 @@ body {
 
 .text-center {
     align-items: center;
-    display: flex;
+
 }
 
 .img-photo {
@@ -59,3 +57,13 @@ body {
     max-width: 150px;
 }
 
+.nav-down {
+    position: fixed;
+    top: 0;
+    transition: top 0.5s ease-in-out;
+    width: 100%;
+}
+
+.nav-up {
+    top: -80px;
+}
