--- a/MyPartyCore/Views/Party/Edit.cshtml
+++ b/MyPartyCore/Views/Party/Edit.cshtml
@@ -14,8 +14,8 @@
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Date" class="control-label"></label>
-            <input asp-for="Date" class="form-control" />
+            <label asp-for="Date" class="label-control"></label>
+            <input asp-for="Date" type="text" class="form-control datetimepicker" />
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -37,3 +37,26 @@
 </div>
 
 
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+
+
+    <!--javascript for init-->
+    <script>
+        $('.datetimepicker').datetimepicker({
+            icons: {
+                time: "fa fa-clock-o",
+                date: "fa fa-calendar",
+                up: "fa fa-chevron-up",
+                down: "fa fa-chevron-down",
+                previous: 'fa fa-chevron-left',
+                next: 'fa fa-chevron-right',
+                today: 'fa fa-screenshot',
+                clear: 'fa fa-trash',
+                close: 'fa fa-remove'
+            }
+        });
+
+    </script>
+}
