--- a/MyPartyCore/Views/Shared/_Layout.cshtml
+++ b/MyPartyCore/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html class="cssanimations">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,51 +15,69 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-    <link rel="stylesheet" href="~/lib/paper-kit-2/assets/css/paper-kit.css">
+
+    <!--
+        <link rel="stylesheet" href="~/lib/paper-kit-2/assets/css/paper-kit.css">
+      -->
+
     <link href="~/css/paper-kit-2-pro.css" rel="stylesheet">
+
+    <!--     Fonts and icons     -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
 
-    <div class="wrapper">
-        <partial name="_CookieConsentPartial" />
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #e3f2fd;">
-            <div class="container">
+    <partial name="_CookieConsentPartial" />
+    <nav class="navbar navbar-expand-lg fixed-top nav-down">
+        <div class="container">
+            <div class="navbar-translate">
                 <a class="navbar-brand" href="/">@Localizer["NavbarBrand"]</a>
-                <partial name="_LoginPartial" />
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Переключить навигацию">
+                    <span class="navbar-toggler-bar bar1"></span>
+                    <span class="navbar-toggler-bar bar2"></span>
+                    <span class="navbar-toggler-bar bar3"></span>
+                </button>
             </div>
-        </nav>
-
-
-        <div class="row" style="height: 100%;">
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-6">
-
-                @RenderBody()
-
-            </div>
-            <div class="col-md-3">
-                @RenderSection("ListParties", required: false)
-            </div>
+            <partial name="_LoginPartial" />
         </div>
+</nav>
 
-        <!-- Footer -->
+    <div class="section-space"></div>
 
-        <footer>
-            <div class="navbar-fixed-bottom row-fluid fixed-bottom">
-                <div class="navbar-inner">
-                    <div class="container">
-                        <div class="float-right col-md-2">
-                            @await Html.PartialAsync("_SelectLanguagePartial")
-                        </div>
-                    </div>
+    <div class="wrapper">
+        <div class="section text-center landing-section">
+            <div class="row" style="height: 100%;">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-6">
+
+                    @RenderBody()
+
+                </div>
+                <div class="col-md-3">
+                    @RenderSection("ListParties", required: false)
                 </div>
             </div>
-        </footer>
-        <!-- Footer -->
-
+        </div>
     </div>
+
+    <!-- Footer -->
+
+    <footer class="footer-fixed-bottom fixed-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="dropdown bootstrap-select float-right">
+                    @await Html.PartialAsync("_SelectLanguagePartial")
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Footer -->
+
+
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -84,7 +102,6 @@
 
 
     <script src="~/lib/paper-kit-2/assets/js/popper.js" type="text/javascript"></script>
-    <script src="~/js/paper-kit-2-pro.js"></script>
 
     <!-- Switches -->
     <script src="~/lib/paper-kit-2/assets/js/bootstrap-switch.min.js"></script>
@@ -96,10 +113,14 @@
     <script src="~/lib/paper-kit-2/assets/js/moment.min.js"></script>
     <script src="~/lib/paper-kit-2/assets/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
 
-    <script src="~/lib/paper-kit-2/assets/js/paper-kit.js" type="text/javascript"></script>
+    <!--
+           <script src="~/lib/paper-kit-2/assets/js/paper-kit.js" type="text/javascript"></script>
+    -->
 
     <script src="~/js/jasny-bootstrap.js"></script>
+    <script src="~/js/paper-kit-2-pro.js"></script>
+
 
     @RenderSection("Scripts", required: false)
 </body>
-</html>
+    </html>
