--- a/MyPartyCore/Views/Users/Edit.cshtml
+++ b/MyPartyCore/Views/Users/Edit.cshtml
@@ -16,9 +16,9 @@
             <input type="text" asp-for="Email" class="form-control" />
             <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Birthday" class="control-label"></label>
-            <input asp-for="Birthday" class="form-control" />
+        <div class="form-group date">
+            <label asp-for="Birthday" class="label-control"></label>
+            <input asp-for="Birthday" type="text" class="form-control datetimepicker" />
             <span asp-validation-for="Birthday" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -31,3 +31,28 @@
             <input type="submit" value=@Localizer["Save"] class="btn btn-default" />
         </div>
     </form>
+
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+
+
+    <!--javascript for init-->
+    <script>
+        $('.datetimepicker').datetimepicker({
+            icons: {
+                time: "fa fa-clock-o",
+                date: "fa fa-calendar",
+                up: "fa fa-chevron-up",
+                down: "fa fa-chevron-down",
+                previous: 'fa fa-chevron-left',
+                next: 'fa fa-chevron-right',
+                today: 'fa fa-screenshot',
+                clear: 'fa fa-trash',
+                close: 'fa fa-remove'
+            },
+                format: 'L'
+        });
+
+    </script>
+}
