--- a/MyPartyCore/wwwroot/css/paper-kit-2-pro.css
+++ b/MyPartyCore/wwwroot/css/paper-kit-2-pro.css
@@ -7549,10 +7549,13 @@ textarea.form-control {
     }
 
     .profile-picture .fileinput-exists img {
+        width: 150px;
+        height: 150px;
         max-width: 150px;
         max-height: 150px;
         border-radius: 50%;
         margin-bottom: 10px;
+        object-fit: cover;
     }
 
 .bootstrap-tagsinput {
