--- a/MyPartyCore/Views/Account/Profile.cshtml
+++ b/MyPartyCore/Views/Account/Profile.cshtml
@@ -3,35 +3,45 @@
     ViewData["Title"] = @Localizer["Title"];
 }
 
-<div class="profile-content section">
-    <div class="container">
-        <div class="row">
-            <div class="profile-picture">
-                <div class="fileinput fileinput-new text-center" data-provides="fileinput">
+<form asp-action="Profile" asp-controller="Account" method="post"  enctype="multipart/form-data">
 
-                    <div class="fileinput-new thumbnail img-circle img-no-padding" data-trigger="fileinput" style="width: 150px; height: 150px;">
-                        <img src="/Party/GetImage?userName=placeholder" alt="..." style="object-fit: cover;">
-                    </div>
+    <div class="profile-content section">
+        <div class="container">
+            <div class="row">
+                <div class="profile-picture">
 
-                    <div class="fileinput-preview fileinput-exists img-circle img-no-padding" style="width: 150px; height: 150px;"></div>
-                    <div>
-                        <span class="btn btn-outline-default btn-file btn-round">
-                            <span class="fileinput-new">Add Photo</span>
-                            <span class="fileinput-exists">Change</span>
-                            <input type="file" name="">
-                        </span>
-                        <br>
-                        <a href="#paper-kit" class="btn btn-link btn-danger fileinput-exists btn-round" data-dismiss="fileinput"><i class="fa fa-times"></i> Remove</a>
+                    
+
+                    <div class="fileinput text-center @(@Model.AvatarExist?"fileinput-exists":"fileinput-new") " data-provides="fileinput">
+                        <div class="fileinput-new thumbnail img-circle img-no-padding" data-trigger="fileinput" style="width: 150px; height: 150px;">
+                            <img src="/Party/GetImage?userName=placeholder" alt="..." style="object-fit: cover;">
+                        </div>
+
+                        <div class="fileinput-preview fileinput-exists img-circle img-no-padding" style="width: 150px; height: 150px;">
+                            @if (Model.AvatarExist)
+                            {
+                                <img src='@Url.Action("GetImage", "File", new { fileID = Model.AvatarID })'>
+                            }
+                        </div>
+                        <div>
+                            <span class="btn btn-outline-default btn-file btn-round">
+                                <span class="fileinput-new">Add Photo</span>
+                                <span class="fileinput-exists">Change</span>
+                                <input type="file" name="file">
+                            </span>
+                            <br>
+                            <a href="#paper-kit" class="btn btn-link btn-danger fileinput-exists btn-round" data-dismiss="fileinput"><i class="fa fa-times"></i> Remove</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<form asp-action="Edit" asp-controller="Users">
     <div class="form-group">
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="AvatarExist" />
+        <input type="hidden" asp-for="AvatarID" />
     </div>
     <div class="form-group">
         <label asp-for="UserName" class="control-label"></label>
@@ -54,12 +64,16 @@
         <span asp-validation-for="Sex" class="text-danger"></span>
     </div>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <input type="submit" value=@Localizer["Save"] class="btn btn-default" />
+    <div class="text-center">
+        <div class="form-group">
+            <input type="submit" value=@Localizer["Save"] class="btn btn-default" />
+        </div>
     </div>
 </form>
 
-<a asp-controller="Party" asp-action="List" asp-route-id="@Model.Id">@Localizer["ListOfMyParties"]</a>
+<div class="text-center">
+    <a asp-controller="Party" asp-action="List" asp-route-id="@Model.Id">@Localizer["ListOfMyParties"]</a>
+</div>
 
 @section Scripts {
 
@@ -80,7 +94,7 @@
                 clear: 'fa fa-trash',
                 close: 'fa fa-remove'
             },
-                format: 'L'
+            format: 'L'
         });
 
     </script>
