--- a/MyPartyCore/Views/Home/Index.cshtml
+++ b/MyPartyCore/Views/Home/Index.cshtml
@@ -3,18 +3,21 @@
 
 @model List<MyPartyCore.ViewModels.PartyViewModel>
 
-<h2>@Localizer["Welcome"]</h2>
+<div class="text-center">
 
-@foreach (var item in Model)
-{
-    <p>
-        <h4><party party-view="item" controller-name="Party" action-name="index"></party></h4>
-    </p>
-}
+    <h2>@Localizer["Welcome"]</h2>
 
-@if ((await AuthorizationService.AuthorizeAsync(User, "Over18")).Succeeded)
-{
-<a asp-controller="Party" asp-action="AdultParties">@Localizer["PartiesForAdult"]</a>
-}
+    @foreach (var item in Model)
+    {
+        <p>
+            <h4><party party-view="item" controller-name="Party" action-name="index"></party></h4>
+        </p>
+    }
 
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Over18")).Succeeded)
+    {
+        <a asp-controller="Party" asp-action="AdultParties">@Localizer["PartiesForAdult"]</a>
+    }
+
+</div>
 
