--- a/MyPartyCore/Views/Shared/_Layout.cshtml
+++ b/MyPartyCore/Views/Shared/_Layout.cshtml
@@ -42,12 +42,12 @@
             </div>
             <partial name="_LoginPartial" />
         </div>
-</nav>
+    </nav>
 
     <div class="section-space"></div>
 
     <div class="wrapper">
-        <div class="section text-center landing-section">
+        <div class="section landing-section">
             <div class="row" style="height: 100%;">
                 <div class="col-md-3">
                 </div>
@@ -65,7 +65,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer-fixed-bottom fixed-bottom">
+    <footer class="footer-gray footer-white fixed-bottom">
         <div class="container">
             <div class="row">
                 <div class="dropdown bootstrap-select float-right">
@@ -76,11 +76,27 @@
     </footer>
 
     <!-- Footer -->
-
+    <!-- classicModal -->
+    <div class="modal fade" id="classicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h5 class="modal-title text-center" id="exampleModalLabel"></h5>
+                </div>
+                <div class="modal-body">
+                    <img src="" id="preview" style="max-width:100%; height:auto">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/paper-kit-2/assets/js/popper.js" type="text/javascript"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
@@ -91,6 +107,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
         </script>
+        <script src="~/lib/paper-kit-2/assets/js/popper.js" type="text/javascript"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
@@ -99,9 +116,6 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
-
-    <script src="~/lib/paper-kit-2/assets/js/popper.js" type="text/javascript"></script>
 
     <!-- Switches -->
     <script src="~/lib/paper-kit-2/assets/js/bootstrap-switch.min.js"></script>
