--- a/MyPartyCore/Views/Shared/_Layout.cshtml
+++ b/MyPartyCore/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
     <div class="section-space"></div>
 
     <div class="wrapper">
-        <div class="section landing-section">
+        <div class="">
             <div class="row" style="height: 100%;">
                 <div class="col-md-3">
                 </div>
