--- a/MyPartyCore/Views/Shared/_LoginPartial.cshtml
+++ b/MyPartyCore/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using MyPartyCore.DB.Models
+@using MyPartyCore.DB.BL
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
+@inject IPhotoService _photoService
+
+@{
+    string userId = UserManager.GetUserId(User);
+    string imgFilePath = await _photoService.GetPathAvatarByUserId(userId);
+}
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -11,11 +18,11 @@
             <li class="nav-item dropdown">
                 <a href="" class="nav-link" data-toggle="dropdown" width="30" height="30" aria-expanded="false">
                     <div class="profile-photo-small">
-                        <img src='@Url.Action("GetImage", "File", new { fileID = 2 })' class="img-circle img-responsive img-no-padding image-circle-dropdown">
+                        <img src="~/@imgFilePath" class="img-circle img-responsive img-no-padding image-circle-dropdown">
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right dropdown-info">
-                    <a asp-controller="Account" asp-action="Profile" asp-route-id="@UserManager.GetUserId(User)" class="dropdown-item">@Localizer["HiUser"] @UserManager.GetUserName(User)</a>
+                    <a asp-controller="Account" asp-action="Profile" asp-route-id="@userId" class="dropdown-item">@Localizer["HiUser"] @UserManager.GetUserName(User)</a>
                     <a class="dropdown-item" href="#">Settings</a>
                     <li class="divider"></li>
                     @if (User.IsInRole("admin"))
@@ -32,10 +39,10 @@
 }
 else
 {
-<div class="collapse navbar-collapse navbar-right">
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a asp-controller="Account" asp-action="Register" class="nav-link">@Localizer["Register"]</a></li>
-        <li class="nav-item"><a asp-controller="Account" asp-action="Login" class="nav-link">@Localizer["Login"]</a></li>
-    </ul>
-</div>
+    <div class="collapse navbar-collapse navbar-right">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a asp-controller="Account" asp-action="Register" class="nav-link">@Localizer["Register"]</a></li>
+            <li class="nav-item"><a asp-controller="Account" asp-action="Login" class="nav-link">@Localizer["Login"]</a></li>
+        </ul>
+    </div>
 }
