--- a/MyPartyCore/Views/Account/Register.cshtml
+++ b/MyPartyCore/Views/Account/Register.cshtml
@@ -39,7 +39,7 @@
 
                         <div class="division">
                             <div class="line l"></div>
-                            <span>or</span>
+                            <span>@Localizer["or"]</span>
                             <div class="line r"></div>
                         </div>
 
