--- a/MyPartyCore/Views/Account/Login.cshtml
+++ b/MyPartyCore/Views/Account/Login.cshtml
@@ -1,33 +1,42 @@
 ﻿@model MyPartyCore.ViewModels.LoginViewModel
 
 
-<div class="text-center">
-    <form method="post" asp-controller="Account" asp-action="Login" class="form-signin">
-        <h2>@Localizer["Title"]</h2>
-        <div asp-validation-summary="ModelOnly"></div>
-        <div>
-            <label asp-for="Name" class="control-label"></label><br />
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+    <div class="login-page full-screen">
+        <div class="page-header" style="background-image: url('@Url.Content("~/party.jpg")');">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6 ml-auto mr-auto">
+                        <div class="card card-register">
+                            <h3 class="card-title">@Localizer["Title"]</h3>
+                            <form method="post" asp-controller="Account" asp-action="Login" class="form-signin">
+                                <div>
+                                    <label asp-for="Name" class="control-label"></label>
+                                    <input asp-for="Name" class="form-control" />
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                </div>
+                                <div>
+                                    <label asp-for="Password" class="control-label"></label>
+                                    <input asp-for="Password" class="form-control" />
+                                    <span asp-validation-for="Password" class="text-danger"></span>
+                                </div>
+                                <div class="custom-control custom-switch form-group">
+                                    <input asp-for="RememberMe" class="custom-control-input" />
+                                    <label asp-for="RememberMe" class="custom-control-label"></label>
+                                </div>
+                                <div asp-validation-summary="ModelOnly"></div>
+                                <div>
+                                    <input type="submit" value=@Localizer["Login"] class="btn btn-danger btn-block btn-round" />
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <label asp-for="Password" class="control-label"></label><br />
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-check">
-            <input asp-for="RememberMe" class="form-check-input" id="RememberMeCheck" />
-            <label asp-for="RememberMe" class="form-check-label" for="exampleCheck1"></label><br />
-        </div>
-        <div>
-            <input type="submit" value=@Localizer["Login"] class="btn btn-lg btn-primary btn-block" />
-        </div>
-    </form>
-</div>
+    </div>
 
+        @section Scripts {
 
-@section Scripts {
+            <partial name="_ValidationScriptsPartial" />
 
-    <partial name="_ValidationScriptsPartial" />
-
-}
+        }
