--- a/MyPartyCore/Views/Home/Index.cshtml
+++ b/MyPartyCore/Views/Home/Index.cshtml
@@ -4,26 +4,28 @@
 
     <div class="section landing-section">
         <div class="row" style="height: 100%;">
+            <div class="ml-auto mr-auto">
 
-            @model List<MyPartyCore.ViewModels.PartyViewModel>
+                @model List<MyPartyCore.ViewModels.PartyViewModel>
 
-            <div class="text-center">
+                <div class="text-center">
 
-                <h2>@Localizer["Welcome"]</h2>
+                    <h2>@Localizer["Welcome"]</h2>
 
-                @foreach (var item in Model)
-                {
-                    <p>
-                        <h4><party party-view="item" controller-name="Party" action-name="index"></party></h4>
-                    </p>
-                }
+                    @foreach (var item in Model)
+                    {
+                        <p>
+                            <h4><party party-view="item" controller-name="Party" action-name="index"></party></h4>
+                        </p>
+                    }
 
-                @if ((await AuthorizationService.AuthorizeAsync(User, "Over18")).Succeeded)
-                {
-                    <a asp-controller="Party" asp-action="AdultParties">@Localizer["PartiesForAdult"]</a>
-                }
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "Over18")).Succeeded)
+                    {
+                        <a asp-controller="Party" asp-action="AdultParties">@Localizer["PartiesForAdult"]</a>
+                    }
+
+                </div>
 
             </div>
-
         </div>
     </div>
